--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -48,8 +48,8 @@
 %% \cleardoublepage
 %% \include{summary}
 
-%% \cleardoublepage
-%% \include{appendix}
+\cleardoublepage
+\include{appendix}
 
 \cleardoublepage
 \include{bibliography}
