--- a/appendix.tex
+++ b/appendix.tex
@@ -2,6 +2,7 @@
 
   \input{appendix_constants}
   \input{appendix_datastructures}
+  \input{appendix_tools}
   \input{appendix_runtime}
   %% appendix_lammpsrant
   \input{appendix_gold}
