--- a/parsivald.tex
+++ b/parsivald.tex
@@ -2,12 +2,12 @@
 \label{parsivald}
 
 Parsivald (Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions) entstand 2012 als namenloses Resultat meiner Bachelorarbeit\cite{lorenz_entwicklung_2012} am Fraunhofer ENAS mit dem Ziel der Simulation von Atom\-lagen\-abscheidungs-Prozessen.
-Das Programm war beschränkt auf die atomistische Simulation von Metall\-oxid-ALD mittels MEAM-Potentialen, die in dieser Arbeit auf PVD, CVD mit beliebigen Potentialen erweitert wurde.
+Das Programm war beschränkt auf die atomistische Simulation von Metall\-oxid-ALD mittels MEAM-Potentialen, die in dieser Arbeit auf PVD und CVD mit beliebigen Potentialen erweitert wurde.
 
 \subsection{Zielsetzung für Parsivald}
 
-Das vorgestellte Parsivald-Modell soll die Stärken von MD- und KMC-Methoden vereinen, um so Gasphasenabscheidungen in großen Simulationsräumen mit atomistischer Genauigkeit simulieren zu können.
-Ein wesentliches Ziel ist, die strukturellen Eigenschaften der abgeschiedenen Schichten gut wiederzugeben.
+Das vorgestellte Parsivald-Modell vereint die Stärken von MD- und KMC-Methoden, um so Gasphasenabscheidungen in großen Simulationsräumen mit atomistischer Genauigkeit zu simulieren.
+Ein wesentliches Ziel ist, die strukturellen Eigenschaften der abgeschiedenen Schichten auch für große Oberflächen in effizienten Rechnungen gut wiederzugeben.
 Dabei soll nicht nur die Untersuchung flächiger Abscheidungen sondern auch die Untersuchung des Wachstums an beziehungsweise in dreidimensionalen Nanostrukturen, wie etwa Stufen, Gräben und Poren ermöglicht werden.
 Dazu müssen relativ große Strukturen von \SI{10x10}{\nano\meter} bis \SI{1x1}{\micro\meter} und Schichtdicken bis zu \SI{20}{\nano\meter} (\num{200} ALD-Zyklen) in akzeptabler Rechenzeit (einige Tage bis wenige Wochen) simuliert werden können.
 Die Simulationsräume enthalten dann bis zu \num{1e9} Atome, liegen also bis zu \num{5} Größenordnungen über den Möglichkeiten reiner MD-Simulationen.
@@ -19,17 +19,14 @@ Durch die Nutzung massiver Parallelisierung werden zudem atomistische Simulation
   \centering
   \def\svgwidth{\textwidth}
   \input{img/parsivald-schema-flat.pdf_tex}
-  \caption{Auswahl und Durchführung einer Reaktion, verteilt auf KMC und MD}
+  \caption{Auswahl und Durchführung einer Adsorption, verteilt auf KMC und MD}
   \label{fig:parsivald-schema}
 \end{figure}
 
 Der Grundgedanke von Parsivald besteht in der Aufteilung der Simulation in mehrere Skalen.
-So ergeben sich zwei zeitliche Skalen durch die hohe Geschwindigkeit der Reaktionen im Kontrast zu der niedrigen Frequenz, in der diese in Nachbarschaft auftreten.
-Einzelne Reaktionen werden durch KMC-Ereignisse dargestellt, in welchen die Nachbarschaft des Adsorptionsortes des Precursormoleküles (MD-Box) extrahiert, einem MD-Prozess zur Berechnung übergeben wird und anschließend wieder in die globale Struktur zurückgeführt wird (Abbildung~\ref{fig:parsivald-schema}).
-
-Abbildung~\ref{fig:parsivald-stephierarchy} stellt die Funktionsweise einer Parsivald-Simulation vor, die im Wesentlichen aus Vor- und Nachbereitung sowie einer Prozessschleife besteht.
-Innerhalb der Hauptschleife werden nacheinander in mehreren Prozessschritten mögliche Adsorptionen, Ligandenaustausch-Reaktionen oder Relaxationen mit KMC-Mechanismen ausgewählt und nach dem oben beschriebenen Mechanismus berechnet, wobei die Ereignisse in diesem Modell auf eine dünne Oberflächenschicht begrenzt sind.
-Das setzt zwar diffusionsarme Prozesse voraus, ermöglicht dafür jedoch die effiziente Beschreibung von Atomlagenabscheidungen mit vielen Millionen Atomen auf der Mikrometerskala durch die Verringerung der für MD-Simulationen benötigten Atome einerseits und massive Parallelisierung andererseits.
+So ergeben sich zwei zeitliche Skalen durch die hohe Geschwindigkeit der Adsorptionen im Kontrast zu der niedrigen Frequenz, in der diese in direkter Nachbarschaft auftreten.
+Einzelne Adsorptionen werden durch KMC-Ereignisse dargestellt, in welchen die Nachbarschaft des Adsorptionsortes (MD-Box) aus der globalen Struktur extrahiert, einem MD-Prozess zur Berechnung übergeben und anschließend wieder in die globale Struktur zurückgeführt wird (Abbildung~\ref{fig:parsivald-schema}).
+Die MD-Simulation führt in der Regel eine Relaxierung der Oberfläche im kanonischen Ensemble durch, doch sind auch Strukturoptimierungen möglich.
 
 \begin{figure}
   \centering
@@ -43,27 +40,32 @@ Das setzt zwar diffusionsarme Prozesse voraus, ermöglicht dafür jedoch die eff
   \label{fig:parsivald-stephierarchy}
 \end{figure}
 
-Als Eingaben der Simulation dienen das Substrat, eine Sammlung verschiedener Prozessparameter wie Umgebungstemperaturen, Expositionszeiten und Abscheidungsmodi (Abbildung~\ref{fig:parsivald-modes}), sowie MD-Befehlslisten mit Platzhaltern (MD-Maske) samt Potentialparametrisierung.
-Die Konfiguration legt Umgebungseigenschaften, Abscheidungsmodus (Abbildung~\ref{fig:parsivald-modes}), Größe des Si\-mu\-la\-tions- und MD-Raumes und Laufzeitbedingungen des Hostprogrammes fest.
-Die Ausgabe erfolgt kontinuierlich in Ereignis-Logs sowie nach jedem Prozess-Schritt in Form aller Atompositionen, aus denen die Schichteigenschaften bestimmt werden können.
-Optional lassen sich auch einzelne Ereignisse zur späteren Neuberechnung zwecks Fehlersuche speichern.
+Abbildung~\ref{fig:parsivald-stephierarchy} stellt die Funktionsweise einer gesamten Parsivald-Simulation vor, die im Wesentlichen aus Vor- und Nachbereitung sowie einer Prozessschleife besteht, in der nacheinander komplette KMC-Simulationen (Parsivald-Schritte) durchgeführt werden.
+Innerhalb der Parsivald-Schritte werden mögliche Adsorptionen, Ligandenaustausch-Reaktionen oder Relaxationen als KMC-Ereignisse verwaltet, welche auf eine dünne Oberflächenschicht begrenzt sind.
+Nach jedem Ereignis wird eine rechenaufwendige Konnektivitätsprüfung an den Ereignisorten durchgeführt, um desorbierte Atome zu erkennen und von der Oberfläche auszuschließen.
+Damit werden Diffusionen in das Material oder auf seiner Oberfläche unterbunden, dafür jedoch eine effiziente Host-Worker-Parallelisierung ermöglicht.
+%%Ereignisse mit überlappenden MD-Boxen werden in Warteschlangen verwaltet, um die Reihenfolge der KMC-Ereignisse zu bewahren.
+
+Als Eingaben der Simulation dienen das Substrat, eine Sammlung verschiedener Prozessparameter wie Prozesstemperaturen, Expositionszeiten und Abscheidungsmodi (Abbildung~\ref{fig:parsivald-modes}), MD-Befehlslisten mit Platzhaltern (MD-Masken) sowie die Potentialparametrisierung.
+In die MD-Masken werden im Verlauf der Simulation die Eigenschaften der Ereignisse eingetragen, bevor sie als Steuerbefehle an die MD-Simulationen übergeben werden.
+Die Ausgabe erfolgt kontinuierlich in Ereignis-Logs sowie nach jedem Parsivald-Schritt in einem atomistischen Dateiformat, über das strukturelle Eigenschaften bestimmt werden können.
 
 Eine typische Abscheidungs-Simulation verläuft nach folgendem Schema:
 Zuerst wird das Substrat aus einer Datei gelesen und periodisch auf die Größe des Simulationsraums erweitert.
-Das Substrat muss einzig xy-periodische Anschlussbedingungen und eine Mindesthöhe entsprechend der Größe der MD-Box erfüllen und mit den genutzten MD-Potentialen simulierbar sein.
-Ansonsten lassen sich beliebig gemischte und strukturierte Substrate verwenden, wobei durch Überhänge abgeschirmte Bereiche von der aktuellen Oberflächensuche übergangen werden.
-Pro Precursorart und Schritt (Halbzyklus für ALD) wird eine Ereignismaske vorbereitet, welche die physikalischen und numerischen Parameter inklusive der angepassten Steuerbefehle für die MD-Bibliothek zwischenspeichert.
-Anschließend beginnt die Hauptschleife mit Schritt 1, der den ersten Halbzyklus mit Precursor A darstellt.
-Es werden nun mögliche Ereignisorte auf der Oberfläche gesucht, per KMC-Algorithmus Ereignisse an diesen Orten ausgewählt und von MD-Workern möglichst parallel simuliert.
-Bei Erreichen des Timeouts startet der nächste Schritt oder ein neuer Zyklus.
-Nach jedem Schritt werden alle Atome in einem atomistischen Speicherformat zur späteren Analyse auf Festplatte gespeichert.
-Die Abscheidungssimulation endet nach einer vorgegebenen Anzahl an Zyklen oder vollständiger Füllung des Simulationsraumes mit Atomen.
+Das Substrat muss xy-periodische Anschlussbedingungen und eine Mindesthöhe entsprechend der Größe der MD-Box erfüllen und stabil gegenüber den genutzten MD-Potentialen sein.
+Es lassen sich ansonsten beliebig gemischte und strukturierte Substrate verwenden.
+Pro Precursorart und Schritt (Halbzyklus für ALD) wird eine Ereignismaske vorbereitet, welche die physikalischen und numerischen Parameter inklusive der MD-Masken beinhaltet.
+Anschließend beginnt die Hauptschleife mit dem ersten Parsivald-Schritt, in dem mögliche Ereignisse auf der Oberfläche gesucht werden, die vom KMC-Algorithmus nacheinander ausgewählt und von MD-Workern möglichst parallel simuliert werden.
+Bei Erreichen der vorgegebenen Simulationszeit startet der nächste Schritt im Zyklus.
+Die Abscheidungssimulation endet nach einer vorgegebenen Anzahl von Zyklen oder bei vollständiger Füllung des Simulationsraumes mit Atomen.
 
-Mit diesem Schema lassen sich auch CVD- und PVD-Prozesse simulieren, indem der Zyklus auf einen einzigen Schritt beschränkt wird und bei CVD-Simulationen mehrere Arten von Ereignissen gleichzeitig betrachtet.
-Der Zyklen-Timeout kann dann zur Kontrolle der Ausgabefrequenz atomistischer Strukturen genutzt werden.
-Für ALD und CVD lässt sich die Wachstumsrate aus der Reaktionskinetik abschätzen, während sie bei PVD-Simulationen durch den entsprechenden Prozessparameter festgelegt wird.
+Mit diesem Schema lassen sich auch CVD- und PVD-Prozesse simulieren, indem der Zyklus dem zu simulierenden Prozesse angepasst wird (Abbildung~\ref{fig:parsivald-modes}).
+%%auf einen einzigen Schritt beschränkt wird und bei CVD-Simulationen mehrere Arten von Ereignissen gleichzeitig betrachtet.
+%%Der Zyklen-Timeout kann dann zur Kontrolle der Ausgabefrequenz atomistischer Strukturen genutzt werden.
+Die Ereignisraten ergeben sich für PVD-Prozesse aus der Adsorptionsrate der Atome auf der Oberfläche, für CVD und ALD hingegen aus der Arrhenius-Gleichung.
+%% Für ALD und CVD lässt sich die Wachstumsrate aus der Reaktionskinetik abschätzen, während sie bei PVD-Simulationen durch den entsprechenden Prozessparameter festgelegt wird.
 
-\begin{figure}
+\begin{figure}[hbp]
   \captionsetup[subfigure]{singlelinecheck=false}
   \begin{subfigure}[t]{5.7cm}
     \def\svgwidth{\textwidth}
@@ -92,18 +94,20 @@ Für ALD und CVD lässt sich die Wachstumsrate aus der Reaktionskinetik abschät
 
 \subsection{Annahmen und Einschränkungen}
 
+Die folgenden Annahmen werden getroffen, um stabile Prozesse mit guter Skalierbarkeit auf großen Zeit- und Raumskalen beschreiben zu können:
+
 \begin{enumerate}
 \setlength\itemsep{0ex}
-\item Alle Reaktionen finden auf der Oberfläche statt
-\item Reaktionen sind zeitlich und räumlich getrennt
+\item Alle Ereignisse finden auf der Oberfläche statt
+\item Ereignisse sind zeitlich und räumlich getrennt
 \item Oberflächendiffusion ist vernachlässigbar
 \item Bulkdiffusion ist vernachlässigbar
 \end{enumerate}
 
-Die Beschränkung des Modelles auf diffusionsarme Oberflächenabscheidungen ergibt sich aus der Notwendigkeit, Bereiche des Simulationsraumes im statischen Gleichgewicht, in denen keine Reaktionen statt finden, zugunsten der Rechenzeit bei der MD-Simulation zu vernachlässigen.
-Das betrifft die Gasphase und den größten Teil der Struktur ebenso wie abgeschirmte Bereiche der Oberfläche.
-Für Prozesse, welche die oben aufgelisteten Annahmen nicht unterstützen, degeneriert Parsivald zu einer reinen MD-Simulation, für die mit Binning und Nachbarschaftslisten effizientere Parallelisierungsmethoden existieren.
-Ein beschränktes Maß an Oberflächendiffusion lässt sich jedoch mit längeren Relaxationszeiten oder separaten Relaxations-Ereignissen annähernd behandeln, wodurch aber aufgrund der begrenzten Größe der MD-Boxen nur die Diffusion weniger Atome behandelt werden kann.
+Die Beschränkung des Modelles auf diffusionsarme Oberflächenabscheidungen ergibt sich aus der Notwendigkeit, Bereiche des Simulationsraumes im statischen Gleichgewicht, in dem keine Ereignisse statt finden, zugunsten der Rechenzeit bei der MD-Simulation zu vernachlässigen.
+Das betrifft die Gasphase und den größten Teil des Bulkmateriales ebenso wie abgeschirmte Bereiche der Oberfläche.
+Für Prozesse, welche die oben aufgelisteten Annahmen nicht unterstützen, degeneriert Parsivald zu einer reinen MD-Simulation mit enormem Overhead.
+Ein beschränktes Maß an Oberflächendiffusion lässt sich zwar mit längeren Relaxationszeiten und separaten Relaxations-Ereignissen behandeln, allerdings kann aufgrund der begrenzten Größe der MD-Boxen nur die Diffusion weniger Atome behandelt werden kann.
 
 Weiterhin ist Parsivald auf die zugrunde liegende Molekulardynamik beschränkt.
 So lassen sich nur Systeme simulieren, für die Potentialparametrisierungen existieren, die sowohl Bulksysteme als auch Oberflächen darstellen können, wie es bei EAM- und vielen ReaxFF-Potentialen der Fall ist.
@@ -116,30 +120,30 @@ Eine tatsächliche Anwendbarkeit beider Methoden muss für jeden Prozess einzeln
 
 \subsection{Erweiterungen im Rahmen der Masterarbeit}
 
-Mit der vorliegenden Arbeit wurde das Parsivald-Modell und seine Implementierung um PVD- und CVD-Modi (Abbildung~\ref{fig:parsivald-modes}), eventgebundene sterische Hinderung zum Zweck der CVD-Simu\-lation, ein allgemeines Konfigurationsformat und MD-Befehle mit Platzhaltern (sogenannte MD-Masken) erweitert.
+Mit der vorliegenden Arbeit wurde das Parsivald-Modell und seine Implementierung um PVD- und CVD-Modi (Abbildung~\ref{fig:parsivald-modes}), eventgebundene sterische Hinderung zum Zweck der CVD-Simu\-lation, ein allgemeines Konfigurationsformat und allgemeine MD-Masken erweitert.
 Intern kam die Unterstützung verschiedener atomistischer Dateiformate, die Einbettung der LAMMPS-Umgebungs\-variablen zur Potentialsuche, globale und lokale Suchpfade für alle Eingabedateien und ein interner sowie beliebig viele externe Workerpools dazu.
-Ein standardisiertes Buildsystem sorgt für schnelle und sichere Kompilierung der Software, und eine Vielzahl externer Werkzeuge zur Vorbereitung und Analyse von Prozessen, wie sie in Abschnitt~\ref{mdmethods} vorgestellt werden, ermöglicht schnelle Zyklen der Parameteroptimierung und Auswertung.
+Ein standardisiertes Buildsystem sorgt für schnelle und sichere Kompilierung der Software, und eine Vielzahl externer Werkzeuge zur Vorbereitung und Analyse von Prozessen (Anhang~\ref{appendix_tools}) ermöglicht schnelle Zyklen der Parameteroptimierung und Auswertung.
 
 Diese Änderungen ermöglichen eine einfachere Vorbereitung, Simulation und Untersuchung verschiedener Prozesse und eine aussagekräftigere Analyse der Ergebnisse.
 Auch eine automatisierte Optimierung der Simulation durch selbstständige Anpassung der Prozessparameter wie Temperatur, Druck und Expositionszeit oder MD-spezifischer Parameter wie Thermostatdämpfung, Relaxationsdauer oder Zeitschrittweite ist mittels des Konfigurationsmechanismus' denkbar.
 
 %% Zusätzlicher Aufwand musste beim Einkapseln der MD-Bibliothek LAMMPS betrieben werden (Abschnitt~\ref{lammpssucks}).
 
-\subsection{Ausgabewerte}
+\subsection{Behandlung von fehlerhaften Ereignissen}
 
 Parsivald-Simulationsläufe geben neben der atomistischen Struktur verschiedene Statistiken und Werte in Form von Daten- und Logdateien aus.
-Das beinhaltet die Zahl der versuchten, erfolgreichen und fehlgeschlagenen Ereignisse, laufende Worker, abgeschirmte und deshalb zurückgestellte Ereignisse und die Anzahl aller Atome.
+Das beinhaltet die Zahl der versuchten, erfolgreichen und fehlgeschlagenen Ereignisse, laufende Worker, überlagerte und deshalb zurückgestellte Ereignisse und die Anzahl aller Atome.
 Optional lässt sich eine Verteilung der Häufigkeit eines Zugriffes auf Positionen in der xy-Ebene angeben, um bei reaktiven Prozessen die Auswahlkriterien von Ereignisorten zu prüfen.
 Anhand der atomistischen Struktur lassen sich Oberflächenrauheiten, Porenverteilungen, Dichten, Schichtdicken und Eigenschaften eventueller Kristalle bestimmen (Abschnitt~\ref{mdmethods}).
 
-Die Auswertung der Abbruchrate ist besonders bei der Optimierung von Prozessparametern wichtig, da sich über sie Fehler in der Prozesskonfiguration oder in der gebildeten Struktur frühzeitig erkennen lassen (siehe Abbildung~\ref{fig:copperparsivald}).
-
-Ein Abbruch ist dabei eine MD-Simulation, die abstürzt, ihre Zeitbegrenzung erreicht oder unerwartet ungebundene Atome und Moleküle erzeugt.
+Die Auswertung der Abbruchrate, also des Verhältnisses von fehlgeschlagenen Ereignissen zu versuchten Ereignissen, ist besonders bei der Optimierung von Prozessparametern wichtig, da sich über sie Fehler in der Prozesskonfiguration oder in der gebildeten Struktur frühzeitig erkennen lassen.
+Ein Abbruch ist dabei eine MD-Simulation, die abstürzt, ihre Zeitbegrenzung erreicht oder zur Desorption von Atomen und Molekülen führt.
 Da die LAMMPS-Bibliothek mit einer geringen Wahrscheinlichkeit unvorhergesehen und ohne Fehlernachrichten abstürzen kann, obwohl die Simulation selbst erfolgreich verlaufen wäre, werden fehlgeschlagene MD-Boxen einem zweiten Prozess zur Simulation übergeben.
 Schlägt auch diese fehl, liegt mit hoher Wahrscheinlichkeit ein struktureller oder methodischer Fehler vor.
+In der aktuellen Implementierung gitl das Herausschlagen von Atomen aus der Oberfläche, wie es bei Sputter-Prozessen statt finden kann, als Abbruch, weshalb in der vorliegenden Arbeit geringe Teilchenenergien oder schnelle Thermostatdämpfungen eingesetzt werden.
 
-Da auf diese Weise bereits ausgewählte Ereignisse verworfen und somit die Abscheidungsraten leicht unterschätzt werden, müssen die Ereignisraten dynamisch entsprechend der mittleren oder erwarteten Abbruchrate angepasst werden.
-Für CVD-Simulationen ist eine Anpassung der Ereignisraten in der Regel nicht notwendig, da fehlerhafte MD-Ereignisse auf eine versehentliche Auswahl eines Ereignisortes zurück zu führen ist.
+Da bei Abbrüchen bereits ausgewählte Ereignisse verworfen und somit die Abscheidungsraten leicht unterschätzt werden, müssen die Ereignisraten dynamisch entsprechend der mittleren oder erwarteten Abbruchrate angepasst werden.
+Für CVD-Simulationen ist eine Anpassung der Ereignisraten in der Regel nicht notwendig, da fehlerhafte MD-Ereignisse auf eine versehentliche Auswahl eines Ereignisortes zurück zu führen sind.
 Die Auswahlkriterien der Ereignisorte sollten alle potentiellen Ereignisse beinhalten, wobei einige weitere Orte versehentlich ausgewählt werden können, die keine Adsorptionen zulassen.
 Eine präzisere Beschreibung der Nachbarschaft und des Bindungszustandes eines Atomes könnte helfen, die Auswahlkriterien zu präzisieren.
 Bisherige Parsivald-Simulationen zeigen Abbruchraten von \SI{<1}{\percent} für stabile Prozesse, wo hingegen fehlerhaft eingestellte Simulationen Werte \SI{>10}{\percent} aufweisen.
